MediaProvider: add to receive scan intent from FileExplorer
FileExplorer will send a broadcast to scan all media files
after delete picture successfully. MediaScannerReceiver do not
receive the scan intent,so FileNotFoundException occur when
user edit the picture which has been deleted.

CRs-Fixed: 509694

Change-Id: Iecfab7ff3f05ec11af8b4e308dba8c36566dee84

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,6 +41,7 @@
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_MOUNTED" />
+                <action android:name="com.android.fileexplorer.action.MEDIA_SCANNER_SCAN_ALL" />
                 <data android:scheme="file" />
             </intent-filter>
             <intent-filter>
